
=======================================================
            WanT code:  Log of Changes 
=======================================================


25 Oct 2008      Inclusion of correlation in transport updated. Test08
                 modified to check correlation effects and shifts in
                 transport. (AF)

24 Oct 2008      Bug fixed (transport calcs) in setting default for overlaps.
                 Bug fix and output updates in memusage.f90. Updates in the
                 management of correlation in transport. (AF)

22 Oct 2008      Little bug fixed in run_AlH.sh and docs/TODO file updated. (AF)

20 Oct 2008      Full implementation of wfc and beta proj buffering is now 
                 properly working and carefully tested. Documentation 
                 updated. (AF)

17 Oct 2008      simple workaround in read_matrix added. (AF)

14 Oct 2008      configure.ac updated from espresso distribution (today's
                 CVS). (AF)

10 Oct 2008      Improvement of memory requirements by means of wfc buffering.
                 nwfcx variable added. (AF)

04 Sep 2008      Internal copies of blas and lapack updated, according to the
                 current needs of WanT. (AF)

03 Sep 2008      Further development of the parallel implementation of 
                 disentangle.x and wannier.x . (AF)

01 Sep 2008      Memory usage analysis added to all data modules. Workspace
                 module for wannier localization added. (AF)

31 Aug 2008      The currently implemented parallelism is not highly
                 performing. Further changes are going to be introduced. (AF)

08 Aug 2008      parallelism over kpts is partly included. Important changes
                 all around, especially related to I/O. Disentangle.x and
                 wannier.x are working in parallel mode. (AF)

07 Jul 2008      blc2wan.f90 updated according to the new postproc_init driver.
                 want_interfaces.f90 changed to solve a recursive module